# uhdm2rtlil

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  RECURSIVE_FUNCTION_OPTIMIZATION.md  RECURSIVE_FUNCTION_PLAN.md  code_structure.md  old_stats.txt  pr_description.md  todos
.githooks/: README.md  pre-commit
.github/: CI_SETUP.md  README.md
.github/workflows/: ci.yml  frontend-matrix.yml
docs/: recent-improvements.md  svtypes_struct_array_plan.md  test-cases.md
slpp_all/: file.lst  file_map.lst
slpp_all/checker/: surelog.chk.html  surelog_0001.chk.html
test/: .gitignore  FRONTEND_MATRIX.md  FRONTEND_MATRIX_README.md  PR_DESCRIPTION.md  README_yosys_tests.md  build_frontends.sh  cosim_equiv_tests.txt  cosim_netlist.py  cosim_uhdm_bugs.txt  cosim_warnings_plan.md  equiv_chtype.ys  equiv_pair.sh  failing_tests.txt  frontend_matrix.csv  frontend_matrix_workflow.sh  import_design.py  imported_tests_status.txt  lib_yosys_staging.sh  materialize_yosys_tests.sh  preprocess_yosys_tests.sh  project_files.sh  restore_yosys_tests.sh  rp32_STATUS.md  run_all_tests.sh  run_frontend_matrix.py  run_yosys_tests.sh  sim_equiv_analyzed.txt  sim_equiv_classification.txt  skip_formal_cosim_tests.txt  skipped_tests.txt  soc_functional_sim.sh  test_comma_assign.sv  test_equivalence.sh  test_read_sv.sh  test_results.txt  test_sim_equivalence.py  test_uhdm_workflow.sh  triage_cosim.py
test/1DUnpackedArray/: 1DUnpackedArray_from_uhdm.il  1DUnpackedArray_from_uhdm_nohier.il  1DUnpackedArray_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/2DFunctionArg/: 2DFunctionArg_from_uhdm.il  2DFunctionArg_from_uhdm_nohier.il  2DFunctionArg_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/2DParameterOfInstance/: 2DParameterOfInstance_from_uhdm.il  2DParameterOfInstance_from_uhdm_nohier.il  2DParameterOfInstance_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/2DUnpackedArray/: 2DUnpackedArray_from_uhdm.il  2DUnpackedArray_from_uhdm_nohier.il  2DUnpackedArray_from_uhdm_synth.v  2DUnpackedArray_from_verilog.il  2DUnpackedArray_from_verilog_nohier.il  2DUnpackedArray_from_verilog_synth.v  dut.sv  netlist_diff.txt  test_uhdm_read.ys  test_verilog_read.ys
test/2DUnpackedFunctionArgument/: 2DUnpackedFunctionArgument_from_uhdm.il  2DUnpackedFunctionArgument_from_uhdm_nohier.il  2DUnpackedFunctionArgument_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/2DeclarationsInFor/: 2DeclarationsInFor_from_uhdm.il  2DeclarationsInFor_from_uhdm_nohier.il  2DeclarationsInFor_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/AdditionAsParameterInInstance/: AdditionAsParameterInInstance_from_uhdm.il  AdditionAsParameterInInstance_from_uhdm_nohier.il  AdditionAsParameterInInstance_from_uhdm_synth.v  AdditionAsParameterInInstance_from_verilog.il  AdditionAsParameterInInstance_from_verilog_nohier.il  AdditionAsParameterInInstance_from_verilog_synth.v  netlist_diff.txt  test_uhdm_read.ys  test_verilog_read.ys
test/AluOps/: AluOps_from_uhdm.il  AluOps_from_uhdm_nohier.il  AluOps_from_uhdm_synth.v  AluOps_from_verilog.il  AluOps_from_verilog_nohier.il  AluOps_from_verilog_synth.v  netlist_diff.txt  test_equiv.ys  test_uhdm_read.ys  test_verilog_read.ys
test/AnonStructs/: AnonStructs_from_uhdm.il  AnonStructs_from_uhdm_nohier.il  AnonStructs_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/AnonymousEnum/: AnonymousEnum_from_uhdm.il  AnonymousEnum_from_uhdm_nohier.il  AnonymousEnum_from_uhdm_synth.v  AnonymousEnum_from_verilog.il  AnonymousEnum_from_verilog_nohier.il  AnonymousEnum_from_verilog_synth.v  netlist_diff.txt  test_uhdm_read.ys  test_verilog_read.ys
test/AnonymousUnion/: AnonymousUnion_from_uhdm.il  AnonymousUnion_from_uhdm_nohier.il  AnonymousUnion_from_uhdm_synth.v  AnonymousUnion_from_verilog.il  AnonymousUnion_from_verilog_nohier.il  AnonymousUnion_from_verilog_synth.v  netlist_diff.txt  test_uhdm_read.ys  test_verilog_read.ys
test/ArithShiftTernary/: ArithShiftTernary_from_uhdm.il  ArithShiftTernary_from_uhdm_synth.v  ArithShiftTernary_from_verilog_nohier.il  ArithShiftTernary_from_verilog_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/ArrayInit/: ArrayInit_from_uhdm.il  ArrayInit_from_uhdm_nohier.il  ArrayInit_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/ArraySize/: ArraySize_from_uhdm.il  ArraySize_from_uhdm_nohier.il  ArraySize_from_uhdm_synth.v  ArraySize_from_verilog.il  ArraySize_from_verilog_nohier.il  ArraySize_from_verilog_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/AssignArraySelPlus/: AssignArraySelPlus_from_uhdm.il  AssignArraySelPlus_from_uhdm_nohier.il  AssignArraySelPlus_from_uhdm_synth.v  test_uhdm_read.ys  test_verilog_read.ys
test/AssignBitSelectPartSelect/: AssignBitSelectPartSelect_from_uhdm.il  AssignBitSelectPartSelect_from_uhdm_nohier.il  AssignBitSelectPartSelect_from_uhdm_synth.v  AssignBitSelectPartSelect_from_verilog.il  AssignBitSelectPartSelect_from_verilog_nohier.il  AssignBitSelectPartSelect_from_verilog_synth.v  netlist_diff.txt  test_uhdm_read.ys  test_verilog_read.ys
test/AssignBitsCallToSubmoduleParameter/: AssignBitsCallToSubmoduleParameter_from_uhdm.il  AssignBitsCallToSubmoduleParameter_from_uhdm_nohier.il  AssignBitsCallToSubmoduleParameter_from_uhdm_synth.v  AssignBitsCallToSubmoduleParameter_from_verilog.il  AssignBitsCallToSubmoduleParameter_from_verilog_nohier.il  AssignBitsCallToSubmoduleParameter_from_verilog_synth.v  netlist_diff.txt  test_uhdm_read.ys  test_verilog_read.ys
test/AssignGeneratedWireInAlways/: AssignGeneratedWireInAlways_from_uhdm.il  AssignGeneratedWireInAlways_from_uhdm_nohier.il  AssignGeneratedWireInAlways_from_uhdm_synth.v  AssignGeneratedWireInAlways_from_verilog.il  AssignGeneratedWireInAlways_from_verilog_nohier.il  AssignGeneratedWireInAlways_from_verilog_synth.v  netlist_diff.txt  test_uhdm_read.ys  test_verilog_read.ys
test/AssignSizeOfVar/: AssignSizeOfVar_from_uhdm.il  AssignSizeOfVar_from_uhdm_nohier.il  AssignSizeOfVar_from_uhdm_synth.v  netlist_diff.txt  (+5 more)
(+5869 files in other folders)
